tests/negative/test_expr_un_add_bad_type.orb
fnc main () () {
    sym (x:ptr null);
    + x;
};